fix: popover causing jump in modal (#320)

--- a/frontend/src/styles/AttendanceRulePage.module.css
+++ b/frontend/src/styles/AttendanceRulePage.module.css
@@ -18,3 +18,7 @@
 .divider {
   padding-bottom: rem(15px);
 }
+
+.variableDropdown {
+  max-width: 100%;
+}
